[gd_scene load_steps=6 format=3 uid="uid://p22wckqd2lqp"]

[ext_resource type="FontFile" uid="uid://cthro4rqrdyu0" path="res://Fonts/press-start-2p-font/PressStart2P-vaV7.ttf" id="1_72sas"]
[ext_resource type="Script" path="res://Scripts/dialogue_box.gd" id="1_nom6x"]
[ext_resource type="Script" path="res://Scripts/action_button.gd" id="2_f3hsb"]
[ext_resource type="Texture2D" uid="uid://bxjpv2prqhgpb" path="res://Arts/dialogue_box.png" id="2_lv1ma"]
[ext_resource type="Script" path="res://Scripts/dialogue_exit_button.gd" id="3_ih5ma"]

[node name="DialogueBox" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 960.0
offset_bottom = 540.0
script = ExtResource("1_nom6x")

[node name="UIBox" type="Control" parent="."]
anchors_preset = 0
offset_left = 46.0
offset_top = 433.0
offset_right = 886.0
offset_bottom = 547.0

[node name="Background" type="TextureRect" parent="UIBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lv1ma")

[node name="InfoText" type="RichTextLabel" parent="UIBox"]
layout_mode = 0
offset_left = 42.0
offset_top = 20.0
offset_right = 578.0
offset_bottom = 100.0
theme_override_colors/default_color = Color(0.0392157, 0.576471, 0.588235, 1)
theme_override_constants/line_separation = 2
theme_override_fonts/normal_font = ExtResource("1_72sas")
theme_override_font_sizes/normal_font_size = 16
text = "Toby is still with the catsitter. The food bowl is empty. I better refill it."

[node name="ActionUI" type="Node2D" parent="UIBox"]
position = Vector2(620, 20)

[node name="ActionButton" type="Control" parent="UIBox/ActionUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 160.0
offset_bottom = 20.0
script = ExtResource("2_f3hsb")

[node name="ActionText" type="Label" parent="UIBox/ActionUI/ActionButton"]
layout_mode = 0
offset_right = 162.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("1_72sas")
theme_override_font_sizes/font_size = 18
text = "Feed Toby"

[node name="OptionHighlight" type="Label" parent="UIBox/ActionUI/ActionButton"]
layout_mode = 0
offset_left = -28.0
offset_right = -5.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("1_72sas")
theme_override_font_sizes/font_size = 18
text = ">"

[node name="LaterButton" type="Control" parent="UIBox/ActionUI"]
layout_mode = 3
anchors_preset = 0
offset_top = 40.0
offset_right = 160.0
offset_bottom = 62.0
script = ExtResource("3_ih5ma")

[node name="LaterText" type="Label" parent="UIBox/ActionUI/LaterButton"]
layout_mode = 0
offset_right = 160.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("1_72sas")
theme_override_font_sizes/font_size = 18
text = "Later"

[node name="OptionHighlight" type="Label" parent="UIBox/ActionUI/LaterButton"]
layout_mode = 0
offset_left = -28.0
offset_right = -5.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("1_72sas")
theme_override_font_sizes/font_size = 18
text = ">"

[node name="TransparentShield" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.588235)
